Stop using overflow hidden

--- a/src/app.css
+++ b/src/app.css
@@ -72,7 +72,6 @@ html,
 #svelte {
   /* Can't use 100vh since Safari includes below-the-fold areas. */
   height: 100%;
-  overflow: hidden;
 }
 
 body {
